tests/semantic/valid/36_e_implicit_ctor_params.hulk
class Parent(x: Number) {}
class Child(y: Number) is Parent {}
