tests/semantic/invalid/34_e_attr_init_type_error.hulk
class Person(x: Number) {
    x_attr: String = x;
}
